# analyst_grok

./: .gitignore  README.md  analyst_improvement.txt  main.py  prompt.py  pyproject.toml
.github/: copilot-instructions.md
agents/: data_scout.py  utils.py  workers.py
prompts/: templates.py
